--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="TextAccueil">Vos activités</string>
     <string name="TitleAjout">Ajout d\'une activité</string>
+    <string name="textAccueil">Vos activités</string>
 </resources>
